[package]
name = "ndwt-python"
version = "0.1.1"
edition = "2021"

[lib]
name = "ndwt"
# "cdylib" is necessary to produce a shared library for Python to import from.
crate-type = ["cdylib"]

[dependencies]
numpy = "0.27.1"
ndwt = { path = "../ndwt", version = "0.1.1" }
ndwt-macros = { path = "../ndwt-macros", version = "0.1.1" }
num-complex = "0.4.6"
num-traits = "0.2.19"

[dependencies.pyo3]
version = "0.27.0"
# "abi3-py38" tells pyo3 (and maturin) to build using the stable ABI with minimum Python version 3.8
features = ["abi3-py38"]
