[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "ndwt"
classifiers = [
    "Development Status :: 1 - Planning",
    "Programming Language :: Python",
    "Programming Language :: Rust",
]
dependencies = ["numpy"]
dynamic = [
    "version",
    "description",
    "readme",
    "urls",
    "authors",
    "license",
    "keywords",
]

[project.optional-dependencies]
test = ["pytest", "numpy"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.maturin]
module-name = "ndwt._ndwt_ext"
profile = "release"
editable-profile = "release"

[tool.cibuildwheel]
build = "cp312-*"
skip = "*_ppc64le *_i686 *_s390x *_armv7l *_riscv64"
build-verbosity = 3
