[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "ndwt"
requires-python = ">= 3.8"
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering",
    "Operating System :: OS Independent",
]
dependencies = ["numpy"]
dynamic = [
    "version",
    "description",
    "readme",
    "urls",
    "authors",
    "license",
    "keywords",
]

[project.optional-dependencies]
test = ["pytest", "numpy"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.maturin]
module-name = "ndwt._ndwt_ext"
profile = "release"
editable-profile = "release"

[tool.cibuildwheel]
build = "cp312-*"
build-verbosity = 3
