[package]
name = "wavelets-macros"
version = "0.1.0"
edition = "2024"
description = "Procedural macros for wavelet filter-coefficient generation and lifting-scheme expansion (used by the `wavelets` crate)."
license = "MIT"
repository = "https://github.com/jcapriot/wavelets-rs"
keywords = ["wavelet", "signal-processing", "proc-macro", "codegen"]
categories = ["science", "algorithms"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.106"
quote = "1.0.44"
syn = { version = "2.0.116", features = ["full"] }
