[package]
name = "wavelets"
version = "0.1.0"
edition = "2024"

[dependencies]
itertools = "0.14.0"
ndarray = { version = "0.17.2", optional = true }
num-complex = "0.4.6"
num-traits = "0.2.19"
rayon = { version = "1.11.0", optional = true }
wavelets-macros = { path = "../wavelets-macros" }

[features]
default = ["rayon", "ndarray"]

[dev-dependencies]
criterion = "0.5.1"
rstest = "0.26.1"
rand = "0.9.2"
chrono = "0.4.42"

[[bench]]
name = "wavelet_bench"
harness = false
