[package]
name = "wavelets"
version = "0.1.0"
edition = "2024"

[dependencies]
itertools = "0.14.0"
multiversion = "0.8.0"
ndarray = { version = "0.17.2", optional = true }
num-complex = "0.4.6"
num-traits = "0.2.19"
rayon = { version = "1.11.0", optional = true }
wavelets-macros = { path = "../wavelets-macros" }

[features]
default = ["rayon", "ndarray"]

[dev-dependencies]
criterion = "0.8.2"
rstest = "0.26.1"

[[bench]]
name = "wavelet_bench"
harness = false
